Fix frinx version after migration
Change-Id: I9b1b02f59a1488f5d576003b5aa4a33ba7443509
Signed-off-by: Maros Marsalek <mmarsalek@frinx.io>

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -16,12 +16,12 @@
     <parent>
         <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>binding-parent</artifactId>
-        <version>0.10.1-Carbon</version>
+        <version>0.10.1-Carbon-SR1.3_1_0_rc2-frinxodl-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-extensions</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>3.1.0.rc2-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
 </project>
