--- a/features/pom.xml
+++ b/features/pom.xml
@@ -12,13 +12,13 @@
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>features-parent</artifactId>
-    <version>1.8.1-Carbon</version>
+    <version>1.8.1-Carbon-SR1.3_1_0_rc2-frinxodl-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
   <groupId>io.frinx.openconfig</groupId>
   <artifactId>openconfig-features</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>3.1.0.rc2-frinx-SNAPSHOT</version>
   <name>${project.artifactId}</name>
 
   <prerequisites>
@@ -26,7 +26,7 @@
   </prerequisites>
 
   <properties>
-    <mdsal.model.version>0.10.1-Carbon</mdsal.model.version>
+    <mdsal.model.version>0.10.1-Carbon-SR1.3_1_0_rc2-frinxodl-SNAPSHOT</mdsal.model.version>
     <configfile.directory>etc/opendaylight/karaf</configfile.directory>
   </properties>
 
