--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -16,13 +16,13 @@
     <parent>
         <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>binding-parent</artifactId>
-        <version>0.10.1-Carbon</version>
+        <version>0.10.1-Carbon-SR1.3_1_0_rc2-frinxodl-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-interfaces</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>3.1.0.rc2-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <dependencies>
@@ -34,23 +34,22 @@
         <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>ietf-interfaces</artifactId>
-            <version>2014.05.08.10.1-Carbon</version>
+            <version>2014.05.08.10.1-Carbon-SR1.3_1_0_rc2-frinxodl-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>ietf-inet-types-2013-07-15</artifactId>
-            <version>1.2.1-Carbon</version>
+            <version>1.2.1-Carbon-SR1.3_1_0_rc2-frinxodl-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>ietf-yang-types-20130715</artifactId>
-            <version>2013.07.15.10.1-Carbon</version>
+            <version>2013.07.15.10.1-Carbon-SR1.3_1_0_rc2-frinxodl-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>iana-if-type-2014-05-08</artifactId>
-            <version>2014.05.08.10.1-Carbon</version>
+            <version>2014.05.08.10.1-Carbon-SR1.3_1_0_rc2-frinxodl-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
 </project>
