--- a/types/pom.xml
+++ b/types/pom.xml
@@ -16,13 +16,13 @@
     <parent>
         <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>binding-parent</artifactId>
-        <version>0.10.1-Carbon</version>
+        <version>0.10.1-Carbon-SR1.3_1_0_rc2-frinxodl-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-types</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>3.1.0.rc2-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <dependencies>
