Add network instance model
+ local-routing

remove routing protocols from network instance for now
fix leafrefs failing in yangtools

Change-Id: I3d3cfa83240dac9f26200e97d0d289f7cce21aee
Signed-off-by: Maros Marsalek <mmarsalek@frinx.io>

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
     <module>rib</module>
     <module>types</module>
     <module>vlan</module>
+    <module>local-routing</module>
+    <module>network-instance</module>
 
     <module>features</module>
   </modules>
