Add network-instance dependencies for the VRF reader
Change-Id: I22f767dd29c780f778edee9d06e39518deda130b
Signed-off-by: miroslav.macko <miroslav.macko@pantheon.tech>
(cherry picked from commit d33e0a787f254d598f14526e37f8f4ef1c4259f5)

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -80,5 +80,15 @@
       <artifactId>openconfig-rib</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-network-instance</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-local-routing</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
