--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 
   <modules>
     <module>bgp</module>
+    <module>ospf</module>
     <module>extensions</module>
     <module>interfaces</module>
     <module>if-ip</module>
