Fixed openconfig features.
Change-Id: I822e60ca8e6263ba8356d260bd5f3db5273e92b4
Signed-off-by: Dana Kutenicsova <dkutenicsova@frinx.io>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -90,5 +90,10 @@
       <artifactId>openconfig-local-routing</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-ospf</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
