--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -22,6 +22,6 @@
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-extensions</artifactId>
-    <version>3.1.0.rc2-frinx-SNAPSHOT</version>
+    <version>3.1.0.rc2-frinx</version>
     <packaging>bundle</packaging>
 </project>
