Use IIDs generator in all modules
Change-Id: If430a725d49042289c16606f9391248b5da35545
Signed-off-by: Maros Marsalek <mmarsalek@frinx.io>

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
   </prerequisites>
 
   <modules>
+    <module>ids-code-generator</module>
+    <module>binding-parent</module>
+
     <module>bgp</module>
     <module>ospf</module>
     <module>extensions</module>
