--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -14,14 +14,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.opendaylight.mdsal</groupId>
+        <groupId>io.frinx.openconfig</groupId>
         <artifactId>binding-parent</artifactId>
-        <version>0.10.1-Carbon-SR1.3_1_0_rc3-frinxodl-SNAPSHOT</version>
-        <relativePath/>
+        <version>3.1.0.rc3-frinx-SNAPSHOT</version>
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-extensions</artifactId>
     <version>3.1.0.rc3-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
+
 </project>
