--- a/ospf/pom.xml
+++ b/ospf/pom.xml
@@ -14,10 +14,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.opendaylight.mdsal</groupId>
+        <groupId>io.frinx.openconfig</groupId>
         <artifactId>binding-parent</artifactId>
-        <version>0.10.1-Carbon-SR1.3_1_0_rc3-frinxodl-SNAPSHOT</version>
-        <relativePath/>
+        <version>3.1.0.rc3-frinx-SNAPSHOT</version>
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
