Fix missing relativePath to parent
Change-Id: I18e3261a8eb13db3758c9853993f419d3078a360
Signed-off-by: Maros Marsalek <mmarsalek@frinx.io>

--- a/bgp/pom.xml
+++ b/bgp/pom.xml
@@ -17,6 +17,7 @@
         <groupId>io.frinx.openconfig</groupId>
         <artifactId>binding-parent</artifactId>
         <version>3.1.0.rc3-frinx-SNAPSHOT</version>
+        <relativePath>../binding-parent</relativePath>
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
