--- a/ids-code-generator/pom.xml
+++ b/ids-code-generator/pom.xml
@@ -17,7 +17,7 @@
         <groupId>org.opendaylight.mdsal</groupId>
         <artifactId>binding-parent</artifactId>
         <version>0.10.1-Carbon-SR1.3_1_0_rc3-frinxodl-SNAPSHOT</version>
-        <relativePath/>
+        <relativePath>../binding-parent</relativePath>
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
