--- a/if-ip/pom.xml
+++ b/if-ip/pom.xml
@@ -16,13 +16,13 @@
     <parent>
         <groupId>io.frinx.openconfig</groupId>
         <artifactId>binding-parent</artifactId>
-        <version>3.1.0.rc3-frinx-SNAPSHOT</version>
+        <version>3.1.0.frinx</version>
         <relativePath>../binding-parent</relativePath>
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-if-ip</artifactId>
-    <version>3.1.0.rc3-frinx-SNAPSHOT</version>
+    <version>3.1.0.frinx</version>
     <packaging>bundle</packaging>
 
     <dependencies>
