--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
   <groupId>io.frinx.openconfig</groupId>
   <artifactId>cli-southbound-plugin-openconfig</artifactId>
-  <version>3.1.0.rc3-frinx-SNAPSHOT</version>
+  <version>3.1.0.frinx</version>
   <packaging>pom</packaging>
 
   <prerequisites>
