Add openconfig's platform models
Change-Id: Ia38c1655d02f937abccea127d68835e528beb41a
Signed-off-by: Jakub Morvay <jmorvay@frinx.io>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -95,5 +95,11 @@
       <artifactId>openconfig-ospf</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-platform</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
   </dependencies>
 </project>
