Add openconfig's lldp model
Change-Id: I49e8c01fc042ef43c655cea0fb92e8ba148bc264
Signed-off-by: Jakub Morvay <jmorvay@frinx.io>

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <module>local-routing</module>
     <module>network-instance</module>
     <module>platform</module>
+    <module>lldp</module>
 
     <module>features</module>
   </modules>
