--- a/features/pom.xml
+++ b/features/pom.xml
@@ -100,6 +100,11 @@
       <artifactId>openconfig-platform</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-lldp</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
   </dependencies>
 </project>
