CDP model based on LLDP
Change-Id: I2564353670671fa697fe43887e52e31cea397479
Signed-off-by: Maros Marsalek <mmarsalek@frinx.io>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -105,6 +105,11 @@
       <artifactId>openconfig-lldp</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-cdp</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
   </dependencies>
 </project>
