Adding mpls, using in network-instance.
Change-Id: Ifdee61666f926a78766c82c7b2ceaae4bfa4eaf5
Signed-off-by: Dana Kutenicsova <dkutenicsova@frinx.io>

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <module>platform</module>
     <module>lldp</module>
     <module>cdp</module>
+    <module>mpls</module>
 
     <module>features</module>
   </modules>
