--- a/features/pom.xml
+++ b/features/pom.xml
@@ -82,6 +82,11 @@
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-mpls</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
       <artifactId>openconfig-network-instance</artifactId>
       <version>${project.version}</version>
     </dependency>
