Added ACL to features.
Change-Id: I88567955bab9e7df28879162da3bac5db2445c3f
Signed-off-by: Dana Kutenicsova <dkutenicsova@frinx.io>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -115,6 +115,11 @@
       <artifactId>openconfig-cdp</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-acl</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
   </dependencies>
 </project>
