--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -16,13 +16,13 @@
     <parent>
         <groupId>io.frinx.openconfig</groupId>
         <artifactId>binding-parent</artifactId>
-        <version>3.1.1.rc1-frinx</version>
+        <version>3.1.1.rc2-frinx-SNAPSHOT</version>
         <relativePath>../binding-parent</relativePath>
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-extensions</artifactId>
-    <version>3.1.1.rc1-frinx</version>
+    <version>3.1.1.rc2-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
 </project>
