--- a/ids-code-generator/pom.xml
+++ b/ids-code-generator/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>ids-code-generator</artifactId>
-    <version>3.1.1.rc1-frinx</version>
+    <version>3.1.1.rc2-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <dependencyManagement>
