--- a/features/pom.xml
+++ b/features/pom.xml
@@ -18,7 +18,7 @@
 
   <groupId>io.frinx.openconfig</groupId>
   <artifactId>openconfig-features</artifactId>
-  <version>3.1.1.rc2-frinx-SNAPSHOT</version>
+  <version>3.1.1.rc2-frinx</version>
   <name>${project.artifactId}</name>
 
   <prerequisites>
