--- a/features/pom.xml
+++ b/features/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>features-parent</artifactId>
-    <version>1.8.1-Carbon-SR1.3_1_1_rc3-frinxodl</version>
+    <version>1.8.1-Carbon-SR1.3_1_1_rc4-frinxodl-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
@@ -26,7 +26,7 @@
   </prerequisites>
 
   <properties>
-    <mdsal.model.version>0.10.1-Carbon-SR1.3_1_1_rc3-frinxodl</mdsal.model.version>
+    <mdsal.model.version>0.10.1-Carbon-SR1.3_1_1_rc4-frinxodl-SNAPSHOT</mdsal.model.version>
     <configfile.directory>etc/opendaylight/karaf</configfile.directory>
   </properties>
 
