--- a/network-instance/pom.xml
+++ b/network-instance/pom.xml
@@ -16,13 +16,13 @@
     <parent>
         <groupId>io.frinx.openconfig</groupId>
         <artifactId>binding-parent</artifactId>
-        <version>3.1.1.rc3-frinx</version>
+        <version>3.1.1.rc4-frinx-SNAPSHOT</version>
         <relativePath>../binding-parent</relativePath>
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-network-instance</artifactId>
-    <version>3.1.1.rc3-frinx</version>
+    <version>3.1.1.rc4-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <dependencies>
