--- a/features/pom.xml
+++ b/features/pom.xml
@@ -120,6 +120,11 @@
       <artifactId>openconfig-acl</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-lacp</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
   </dependencies>
 </project>
