--- a/features/pom.xml
+++ b/features/pom.xml
@@ -125,6 +125,11 @@
       <artifactId>openconfig-lacp</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-policy-forwarding</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
   </dependencies>
 </project>
