--- a/policy-forwarding/pom.xml
+++ b/policy-forwarding/pom.xml
@@ -21,7 +21,7 @@
     </parent>
 
     <groupId>io.frinx.openconfig</groupId>
-    <artifactId>openconfig-network-instance</artifactId>
+    <artifactId>openconfig-policy-forwarding</artifactId>
     <version>3.1.1.rc4-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
@@ -33,47 +33,17 @@
         </dependency>
         <dependency>
             <groupId>io.frinx.openconfig</groupId>
-            <artifactId>openconfig-local-routing</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.frinx.openconfig</groupId>
             <artifactId>openconfig-interfaces</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>io.frinx.openconfig</groupId>
-            <artifactId>openconfig-policy</artifactId>
+            <artifactId>openconfig-acl</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>io.frinx.openconfig</groupId>
             <artifactId>openconfig-types</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.frinx.openconfig</groupId>
-            <artifactId>openconfig-bgp</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.frinx.openconfig</groupId>
-            <artifactId>openconfig-ospf</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.frinx.openconfig</groupId>
-            <artifactId>openconfig-vlan</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.frinx.openconfig</groupId>
-            <artifactId>openconfig-mpls</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.frinx.openconfig</groupId>
-            <artifactId>openconfig-policy-forwarding</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
