Added snmp yang
Change-Id: I84d875a4748a63e65f9c2fd3bce7da0af2707ab3
Signed-off-by: Martin Sunal <msunal@frinx.io>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -130,6 +130,11 @@
       <artifactId>openconfig-policy-forwarding</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-snmp</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
   </dependencies>
 </project>
