Added logging models and unification of events
Change-Id: I3e56eba355d585c007c69c5990871d3b6aaa3bca
Signed-off-by: Martin Sunal <msunal@frinx.io>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -135,6 +135,11 @@
       <artifactId>openconfig-snmp</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-logging</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
   </dependencies>
 </project>
