Added augment-identifier and when condition
- "when" condition is not valid but it describes
intent

Change-Id: I38deb2f78a96289a68f5ec735dd2b66ff7a205d9
Signed-off-by: Martin Sunal <msunal@frinx.io>

--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -51,5 +51,10 @@
             <artifactId>iana-if-type-2014-05-08</artifactId>
             <version>2014.05.08.10.1-Carbon-SR1.3_1_1_rc4-frinxodl-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>yang-ext</artifactId>
+            <version>2013.09.07.10.1-Carbon-SR1.3_1_1_rc4-frinxodl-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
