--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>openconfig-types</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.frinx.openconfig</groupId>
+            <artifactId>openconfig-interfaces</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
