--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -34,27 +34,27 @@
         <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>ietf-interfaces</artifactId>
-            <version>2014.05.08.10.1-Carbon-SR1.3_1_1_rc4-frinxodl-SNAPSHOT</version>
+            <version>2014.05.08.10.1-Carbon-SR1.3_1_1_rc4-frinxodl</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>ietf-inet-types-2013-07-15</artifactId>
-            <version>1.2.1-Carbon-SR1.3_1_1_rc4-frinxodl-SNAPSHOT</version>
+            <version>1.2.1-Carbon-SR1.3_1_1_rc4-frinxodl</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>ietf-yang-types-20130715</artifactId>
-            <version>2013.07.15.10.1-Carbon-SR1.3_1_1_rc4-frinxodl-SNAPSHOT</version>
+            <version>2013.07.15.10.1-Carbon-SR1.3_1_1_rc4-frinxodl</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>iana-if-type-2014-05-08</artifactId>
-            <version>2014.05.08.10.1-Carbon-SR1.3_1_1_rc4-frinxodl-SNAPSHOT</version>
+            <version>2014.05.08.10.1-Carbon-SR1.3_1_1_rc4-frinxodl</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>yang-ext</artifactId>
-            <version>2013.09.07.10.1-Carbon-SR1.3_1_1_rc4-frinxodl-SNAPSHOT</version>
+            <version>2013.09.07.10.1-Carbon-SR1.3_1_1_rc4-frinxodl</version>
         </dependency>
     </dependencies>
 </project>
