--- a/binding-parent/pom.xml
+++ b/binding-parent/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>binding-parent</artifactId>
-    <version>3.1.1.rc4-frinx</version>
+    <version>3.1.1.rc5-frinx-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
 
@@ -70,7 +70,7 @@
                                 <dependency>
                                     <groupId>io.frinx.openconfig</groupId>
                                     <artifactId>ids-code-generator</artifactId>
-                                    <version>3.1.1.rc4-frinx</version>
+                                    <version>3.1.1.rc5-frinx-SNAPSHOT</version>
                                     <scope>compile</scope>
                                 </dependency>
                             </dependencies>
