Added uniconfig-model and related augments to interfaces
Change-Id: I71a556dc4d1ef5e521c5d3f1dc19e43a95b070da
Signed-off-by: Martin Sunal <msunal@frinx.io>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -140,6 +140,10 @@
       <artifactId>openconfig-logging</artifactId>
       <version>${project.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>uniconfig-model</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
