--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -32,6 +32,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.frinx.openconfig</groupId>
+            <artifactId>uniconfig-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>ietf-interfaces</artifactId>
             <version>2014.05.08.10.1-Carbon-SR1.3_1_1_rc5-frinxodl-SNAPSHOT</version>
@@ -50,11 +55,6 @@
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>iana-if-type-2014-05-08</artifactId>
             <version>2014.05.08.10.1-Carbon-SR1.3_1_1_rc5-frinxodl-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.mdsal.model</groupId>
-            <artifactId>yang-ext</artifactId>
-            <version>2013.09.07.10.1-Carbon-SR1.3_1_1_rc5-frinxodl-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
