Update VLAN and POLICY models to version 2.X
Change-Id: I1eba5fd0af5475f35fa9652cd13731463629ab0a
Signed-off-by: Maros Marsalek <mmarsalek@frinx.io>

--- a/policy/pom.xml
+++ b/policy/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>openconfig-extensions</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.frinx.openconfig</groupId>
+            <artifactId>openconfig-types</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
