Added BFD model
- OpenConfig BFD model without import openconfig-if-types,
because the import is used in incorrect when statements
- added uniconfig augmentations for integration to uniconfig
- commented out default values
- added model to resolved_yangs.txt

Change-Id: If5f52d665763564f2cdde85567cbd0258682030b
Signed-off-by: Martin Sunal <msunal@frinx.io>

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <module>uniconfig-model</module>
 
     <module>acl</module>
+    <module>bfd</module>
     <module>bgp</module>
     <module>ospf</module>
     <module>extensions</module>
