--- a/features/pom.xml
+++ b/features/pom.xml
@@ -147,6 +147,11 @@
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-netflow</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
       <artifactId>uniconfig-model</artifactId>
       <version>${project.version}</version>
     </dependency>
