--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <module>vlan</module>
     <module>local-routing</module>
     <module>network-instance</module>
+    <module>netflow</module>
     <module>platform</module>
     <module>lldp</module>
     <module>cdp</module>
