--- a/features/pom.xml
+++ b/features/pom.xml
@@ -152,6 +152,12 @@
     </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-qos</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
       <artifactId>uniconfig-model</artifactId>
       <version>${project.version}</version>
     </dependency>
