--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     <module>policy-forwarding</module>
     <module>snmp</module>
     <module>logging</module>
+    <module>qos</module>
 
     <module>features</module>
   </modules>
