--- a/openconfig-parent/pom.xml
+++ b/openconfig-parent/pom.xml
@@ -24,7 +24,7 @@
     </properties>
 
     <groupId>io.frinx.openconfig</groupId>
-    <artifactId>binding-parent</artifactId>
+    <artifactId>openconfig-parent</artifactId>
     <version>3.1.3.rc1-frinx-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
