--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <modules>
     <module>ids-code-generator</module>
-    <module>binding-parent</module>
+    <module>openconfig-parent</module>
     <module>uniconfig-model</module>
 
     <module>acl</module>
