FI-117 Created yang model for last-commit-time
Change-Id: If20ad95e7e543ce79f8788209e5b47f319e89bc6
Signed-off-by: thodor <thodor@frinx.io>

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     <module>policy-forwarding</module>
     <module>snmp</module>
     <module>logging</module>
+    <module>configuration-metadata</module>
     <module>qos</module>
 
     <module>features</module>
