FI-117 : Configuration-Metadata changed packaging and added config-metadata to features
Change-Id: I673f6efbdac77db52fd2a92eb7e8909e3fa43157
Signed-off-by: thodor <thodor@frinx.io>

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -155,7 +155,11 @@
       <artifactId>openconfig-qos</artifactId>
       <version>${project.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>io.frinx.openconfig</groupId>
+      <artifactId>openconfig-configuration-metadata</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <dependency>
       <groupId>io.frinx.openconfig</groupId>
       <artifactId>uniconfig-model</artifactId>
