--- a/configuration-metadata/pom.xml
+++ b/configuration-metadata/pom.xml
@@ -23,7 +23,7 @@
     <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-configuration-metadata</artifactId>
     <version>3.1.3.rc1-frinx-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>bundle</packaging>
 
     <dependencies>
         <dependency>
