Dependencies sorted out.
Change-Id: I9c56454080581b73b5f305ccea6108ad669af39f
Signed-off-by: Dana Kutenicsova <dkutenicsova@frinx.io>

--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -20,7 +20,6 @@
         <relativePath>../openconfig-parent</relativePath>
     </parent>
 
-    <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-interfaces</artifactId>
     <version>3.1.3.rc1-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
@@ -32,29 +31,16 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.frinx.openconfig</groupId>
-            <artifactId>uniconfig-model</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>ietf-interfaces</artifactId>
-            <version>2014.05.08.10.1-Carbon-SR1.3_1_3_rc1-frinxodl-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
-            <artifactId>ietf-inet-types-2013-07-15</artifactId>
-            <version>1.2.1-Carbon-SR1.3_1_3_rc1-frinxodl-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.mdsal.model</groupId>
-            <artifactId>ietf-yang-types-20130715</artifactId>
-            <version>2013.07.15.10.1-Carbon-SR1.3_1_3_rc1-frinxodl-SNAPSHOT</version>
+            <artifactId>yang-ext</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal.model</groupId>
             <artifactId>iana-if-type-2014-05-08</artifactId>
-            <version>2014.05.08.10.1-Carbon-SR1.3_1_3_rc1-frinxodl-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
