--- a/if-ip/pom.xml
+++ b/if-ip/pom.xml
@@ -20,7 +20,6 @@
         <relativePath>../openconfig-parent</relativePath>
     </parent>
 
-    <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-if-ip</artifactId>
     <version>3.1.3.rc1-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
@@ -33,9 +32,13 @@
         </dependency>
         <dependency>
             <groupId>io.frinx.openconfig</groupId>
+            <artifactId>openconfig-extensions</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.frinx.openconfig</groupId>
             <artifactId>openconfig-vlan</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
