--- a/network-instance/pom.xml
+++ b/network-instance/pom.xml
@@ -20,7 +20,6 @@
         <relativePath>../openconfig-parent</relativePath>
     </parent>
 
-    <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-network-instance</artifactId>
     <version>3.1.3.rc1-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
@@ -48,7 +47,7 @@
         </dependency>
         <dependency>
             <groupId>io.frinx.openconfig</groupId>
-            <artifactId>openconfig-types</artifactId>
+            <artifactId>openconfig-acl</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -76,6 +75,11 @@
             <artifactId>openconfig-policy-forwarding</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>yang-ext</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
