--- a/rib/pom.xml
+++ b/rib/pom.xml
@@ -20,7 +20,6 @@
         <relativePath>../openconfig-parent</relativePath>
     </parent>
 
-    <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-rib</artifactId>
     <version>3.1.3.rc1-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
@@ -28,12 +27,17 @@
     <dependencies>
         <dependency>
             <groupId>io.frinx.openconfig</groupId>
-            <artifactId>openconfig-interfaces</artifactId>
+            <artifactId>openconfig-extensions</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>io.frinx.openconfig</groupId>
             <artifactId>openconfig-bgp</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.frinx.openconfig</groupId>
+            <artifactId>openconfig-policy</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
