--- a/vlan/pom.xml
+++ b/vlan/pom.xml
@@ -20,7 +20,6 @@
         <relativePath>../openconfig-parent</relativePath>
     </parent>
 
-    <groupId>io.frinx.openconfig</groupId>
     <artifactId>openconfig-vlan</artifactId>
     <version>3.1.3.rc1-frinx-SNAPSHOT</version>
     <packaging>bundle</packaging>
@@ -30,6 +29,15 @@
             <groupId>io.frinx.openconfig</groupId>
             <artifactId>openconfig-interfaces</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.frinx.openconfig</groupId>
+            <artifactId>openconfig-extensions</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>iana-if-type-2014-05-08</artifactId>
         </dependency>
     </dependencies>
 </project>
