Add vlan-feature + openconfig-artifacts
Change-Id: I3be651526417ad8f3bda160802c4b292d67789be
Signed-off-by: Dana Kutenicsova <dkutenicsova@frinx.io>

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 
   <modules>
     <module>ids-code-generator</module>
+    <module>artifacts</module>
     <module>openconfig-parent</module>
     <module>uniconfig-model</module>
 
